add_executable(classtopic classtopic.cpp)
add_executable(test_1 test_1.cpp)
add_executable(topic_3_decltype topic_3_decltype.cpp)
add_executable(topic_4 topic_4.cpp)
add_executable(topic_7 topic_7_template.cpp)
add_executable(topic_9_using topic_9_using.cpp)
add_executable(topic10_enum topic10_enum.cpp)
add_executable(topic_18_uniqueptr topic_18_uniqueptr.cpp)
add_executable(topic_26 topic_26.cpp)